--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": ""
   },
   "dependencies": {
-    "expres": "^0.0.5",
-    "express": "^4.21.1"
+    "@google/generative-ai": "^0.21.0",
+    "express": "^4.21.1",
+    "google-auth-library": "^9.15.0"
   }
 }
